# Ten

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  STATUS.md  TEN-SPEC.md  VALIDATION.md  WHY-TEN.md  pyproject.toml
libten/: Makefile
libten/include/: ten.h
libten/src/: arena.c  compose.c  facets.c  serialize.c  ten_internal.h  types.c  util.c  validate.c
libten/tests/: test_main.c
ten-mcp-server/: __init__.py  server.py
ten-mcp-server/tests/: test_tools.py
ten_mcp_server/: README.md  __main__.py  pyproject.toml  server.json  server.py
ten_mcp_server/tests/: test_tools.py
ten_rest_api/: __init__.py  __main__.py  app.py
ten_rest_api/tests/: test_api.py
tenlang/: __init__.py  _ffi.py  types.py
tenlang/tests/: test_tenlang.py
