[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ten-mcp-server"
version = "0.1.0"
description = "MCP server exposing the Ten formal algebra for machine intelligence communication"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Jolly Logic, LLC", email = "john@jollylogic.com"}]
dependencies = [
    "mcp[cli]>=1.0.0",
    "tenlang>=0.1.0",
]

[project.urls]
Homepage = "https://tenlang.org"
Repository = "https://github.com/johnbeans/Ten"

[project.scripts]
ten-mcp-server = "ten_mcp_server.server:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["ten_mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
